qtdemux: Do allocation query after exposing all pads and no-more-pads

Also configure video streams as early as possible.

Related https://bugzilla.gnome.org/show_bug.cgi?id=701856
but not fixing that.